test/files/neg/bug4533.check
bug4533.scala:6: error: wrong number of type arguments for scala.collection.GenSetLike, should be 2
  def statusByAlarms(alarms: GenSetLike[FooAlarm]) = println("hello")
                             ^
one error found
